[project]
name = "swimoceanbot"
version = "0.1.0"
description = ""
authors = [
    {name = "stalker7521"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
oauth2client = ">=4.1.3,<5.0.0"
pytelegrambotapi = ">=4.26.0,<5.0.0"
gspread = ">=6.2.0,<7.0.0"
dotenv = ">=0.9.9,<0.10.0"
streamlit = ">=1.44.1,<2.0.0"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
